Es11 Info added... module, index & dynamic files present bugs

--- a/src/package.json
+++ b/src/package.json
@@ -11,5 +11,7 @@
     "Ecma-script"
   ],
   "author": "Claudio Pantoja <cpantoja022@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "type": "module"
+
 }
