Es13 features added

--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,8 @@
   ],
   "author": "Claudio Pantoja <cpantoja022@gmail.com>",
   "license": "MIT",
-  "type": "module"
-
+  "type": "module",
+  "dependencies": {
+    "node-fetch": "^3.3.0"
+  }
 }
